Test Org - Speridian/src/objects/Ba_Account_Addr_Intersection__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>BA_Address__c</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Address</label>
    <nameField>
        <label>Account Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>